# az-ai-mon

./: README.md
services/frontend/: README.md  pyproject.toml  sources.json
services/frontend/app/: main.py
services/frontend/app/comps/: chatbox.py
services/frontend/app/screens/: screens.py
services/frontend/app/screens/chats/: default.py  state.py
services/frontend/app/screens/sources/: catalog.py  display.py  gen.py  state.py
workshop/: README.md  pyproject.toml
workshop/notebooks/: extract.ipynb
workshop/scripts/: chat_with_products.py  config.py  create_search_index.py  eval.py  query_search_index.py
workshop/scripts/assets/: generate_answer.prompty  intent_mapping.prompty
